// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Advisor overlay visual snapshots > overlay-ask-advisor renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx 2.1%/128k ────────────────╮
│Review the primary transcript.                  │
│                                                │
│Context                                         │
│User → Primary                                  │
│Review the cache design.                        │
│                                                │
│Primary                                         │
│The cache now owns request deduplication.       │
│                                                │
│Pull [0,12) · 4.2s                              │
│                                                │
│E2E_SECOND_OPINION: primary_transcript=seen     │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│>                                               │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-empty renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx ?/128k ───────────────────╮
│No Advisor chat yet.                            │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│>                                               │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-focused-input renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx ?/128k ───────────────────╮
│No Advisor chat yet.                            │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│> [7mR[27meview this draft                             │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-long-content-small-terminal renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx 13.3%/128k ─────────╮
│Check whether this very long prompt wraps │
│without breaking the panel border or      │
│hiding the input area.                    │
│                                          │
│Context                                   │
│User → Primary                            │
│Inspect the                               │
│super-long-token-without-natural-breaks-ab│
│cdefghijklmnopqrstuvwxyz-0123456789 in the│
│cache design.                             │
│                                          │
│Primary                                   │
│The Primary response remains visible while│
│wrapping inside the narrow Context block. │
│                                          │
│The narrow overlay wraps the Primary      │
│context safely without widening.          │
│>                                         │
╰──────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-repeated-ask renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx 2.5%/128k ────────────────╮
│Explain the same Primary response from another  │
│angle.                                          │
│                                                │
│The repeated Ask reuses the existing Advisor    │
│Transcript.                                     │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│>                                               │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-reset renders a stable bounded overlay 1`] = `
"╭ Advisor · reset · ctx 0.0%/128k ───────────────╮
│No Advisor chat yet.                            │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│>                                               │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-simplified-tools renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx 3.4%/128k ────────────────────────╮
│Review the delivery plan.                               │
│                                                        │
│Hint Use the SDK path.                                  │
│                                                        │
│Concern Keep delivery after validation.                 │
│                                                        │
│read {"path":"src/cache.ts"} ok                         │
│                                                        │
│The delivery plan is ready.                             │
│                                                        │
│                                                        │
│                                                        │
│                                                        │
│                                                        │
│                                                        │
│>                                                       │
╰────────────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-unfocused-input renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx ?/128k ───────────────────╮
│No Advisor chat yet.                            │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│> Review this draft                             │
╰────────────────────────────────────────────────╯"
`;
